--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             retryBtn = document.getElementById('retry');
 
         bindEvent(errorBtn, 'click', function (e) {
-            sendMessage('error');
+            sendMessage('FAILURE');
         });
         bindEvent(successBtn, 'click', function (e) {
-            sendMessage('success');
+            sendMessage('OK');
         });
         bindEvent(retryBtn, 'click', function (e) {
-            sendMessage('retry');
+            sendMessage('STOP');
         });
     </script>
 </body>
